# practical-deep-learning-for-coders

./: .gitignore  README.md  Untitled.ipynb  lesson1.ipynb  pyproject.toml
practical_deep_learning_for_coders/: __init__.py  lesson1_marimo.py
